# codereview-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  qa_audit.py  requirements.txt  tasks.py
baseline/: run_baseline.py
server/: app.py  environment.py
tests/: test_grader.py  test_hardening.py
