[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "codereview-env"
version = "1.0.0"
description = "OpenEnv environment for AI-driven pull-request code review"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-multipart>=0.0.6",
    "thefuzz>=0.19.0",
    "python-levenshtein>=0.20.0",
    "anyio>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["codereview_env*"]

[project.scripts]
server = "server.app:main"
